# medievalization

./: .directory  .gitignore  .hidden  .pylintrc  Diagramme sans nom.drawio  README.md  app  brainstorm.md  brainstorm.md.backup  brainstorm.tex  modloader.ipynb  mods.md  modules  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.yml
app/: README.rst  server.py
app/controllers/api/: __init__.py  i18n.py
app/controllers/auth/: __init__.py  login.py  oauth.py  register.py  session.py
app/http/: error.py  returns.py  session.py
app/views/: base.html  small.html
app/views/auth/: login.html  oauth-done.html  register.html  template.html
app/views/http/: error.html
conf/: flags.csv  salt.txt  session.toml  wsgi.py
conf/apache2/: main.conf  static.conf
data/auth/: confirm.csv
data/languages/auth/: login.json  register.json  template.json
data/languages/http/: error.json
data/mods/example/: mod.toml
lib/session_db/: __init__.py  __main__.py  interface.py
medievalization/: __init__.py  __main__.py
medievalization/app/: __init__.py
medievalization/app/controllers/: main.py
medievalization/app/http/: router.py
medievalization/app/views/: loading.html
medievalization/modules/: load_path.py
modules/: auth.py  logs.py  mail.py  oauth.py  require.js
modules/i18n/: __init__.py  __main__.py  file.py  languages.py  load.py  objected.py  types.py
modules/i18n/old/: __init__.py  load.py  types.py
modules/mdv/: __init__.py  __main__.py  build.py  launch.py  watch.py
modules/modloader/: __init__.py  mod.py
public/images/flags/: .directory
public/manifests/: browserconfig.xml  site.webmanifest
public/ui/auth/css/: style.css  styles.css  template.css
public/ui/auth/src/: stuff.js  stuff.js.map
public/ui/components/css/: form.css  icon.css  link.css  notifications.css  samp.css  scbo.css  styles.css
public/ui/components/src/: components.js  scbo.js  sources.js
public/ui/root/css/: base.css  small.css  styles.css
public/ui/root/src/: base.js
ui/: tsconfig.json
ui/auth/css/: template.css
ui/auth/src/: stuff.ts
ui/components/css/: form.css  icon.css  link.css  notifications.css  samp.css  scbo.css
ui/components/src/: component.ts  components.ts  scbo.ts  sources.ts
ui/root/css/: base.css  small.css
ui/root/src/: base.ts
ui/shared/css/: colors.css  fonts.css  titles.css
(+4 files in other folders)
